# Simple-Socket

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  LICENSE  Makefile  README.md  ReleaseNotes  clsocket.sln  clsocket.vcxproj  clsocket.vcxproj.filters  greenkeeper.json  help.html  index.html  sitemap.xml
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
ci/: commit-if-changes.sh  format-cmake.sh
cmake/: CodeCoverage.cmake  Simple-Socket-Config.cmake.in  Simple-Socket-Install.cmake  Simple-Socket-Linting.cmake
css/: main.css
docs/: .gitignore  Build.html  CSimpleSocket.md  Examples.html  Intro.html  Options.html  README.md  _config.yml  doc.md  index.md
docs/CSimpleSocket/: index.html
docs/Compilers/: index.html
docs/Core/: index.html
docs/Examples/: index.html
docs/Generics/: index.html
docs/Getting-Started/: index.html
docs/_data/: navigation.yml
docs/_doc/: CSimpleSocket  CSimpleSocket.md
docs/docs/: Build.md  CSimpleSocket.md  Compilers.md  Core.md  Examples.md  Generics.md  Getting-Started.md  Introduction.md  Options.md
docs/website/: package.json  sidebars.json  siteConfig.js
docs/website/core/: Footer.js
docs/website/pages/en/: help.js  index.js
en/: help.html  index.html
en/help/: index.html
examples/: CMakeLists.txt  EchoClient.cpp  EchoServer.cpp  HttpClient.cpp  Multicast.cpp  QueryDayTime.cpp  RecvAsync.cpp
examples/Dns/: DnsQuery.h  Links.md  Main.cpp
examples/HttpRequest/: BaseSocket.h  CmdLineParser.cpp  CmdLineParser.h  Constants.h  HrefParser.cpp  HrefParser.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpSession.cpp  HttpSession.h  Main.cpp
examples/dns/: Main.cpp
examples/http/: CmdLineParser.cpp  CmdLineParser.h  Constants.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  Main.cpp
src/: ActiveSocket.cpp  ActiveSocket.h  Host.h  PassiveSocket.cpp  PassiveSocket.h  SimpleSocket.cpp  SimpleSocket.h  StatTimer.h
tests/: CMakeLists.txt  async.cpp  benchmarks.cpp  main.cpp  multicast.cpp  unicast.cpp
tests/catch2/: catch.hpp
